--- a/miniprogram-3/project.config.json
+++ b/miniprogram-3/project.config.json
@@ -4,7 +4,7 @@
 		"ignore": []
 	},
 	"setting": {
-		"urlCheck": true,
+		"urlCheck": false,
 		"es6": true,
 		"enhance": false,
 		"postcss": true,
@@ -76,6 +76,13 @@
 					"id": -1,
 					"name": "landing",
 					"pathName": "pages/landing/landing",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "post",
+					"pathName": "pages/post/post",
 					"scene": null
 				}
 			]
